Fix header with position fixed to eliminate nav jump between pages.

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     line-height: 1.6;
     background-color: #f4f4f4;
     color: #333;
+    padding-top: 62px;
 }
 
 /* Header */
@@ -23,6 +24,11 @@ header {
     background-color: #333;
     color: #fff;
     padding: 10px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
 }
 
 nav {
